--- a/1_JSON_parser.cbp
+++ b/1_JSON_parser.cbp
@@ -30,8 +30,12 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++1z" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add library="C:/Users/Кир/Downloads/qb64/internal/c/c_compiler/mingw/lib/libws2_32.a" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
