--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ set(
 
 include("tools/gate/cmake/HunterGate.cmake")
 
-huntergate(
-  URL "https://github.com/ruslo/hunter/archive/v0.23.34.tar.gz"
-  SHA1 "70287b1ffa810ee4e952052a9adff9b4856d0d54"
+HunterGate(
+  URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
+  SHA1 "9a3594a61227967fb92159339ba326701b287b19"
 )
 
 project(JSON_Parser)
@@ -50,18 +50,20 @@ target_include_directories(
         ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-find_library(
-  GTEST_LOCAL_LIB_MAIN
-  NAMES gtest_main
-  PATHS ${PROJECT_NAME}/lib64/
-)
-target_link_libraries(
-  tests
-  ${CMAKE_THREAD_LIBS_INIT}
-  ${GTEST_LOCAL_LIB}
-  ${GTEST_LOCAL_LIB_MAIN}
-  ${PROJECT_NAME}
-)
+target_link_libraries(tests GTest::main ${PROJECT_NAME})
+
+#find_library(
+#  GTEST_LOCAL_LIB_MAIN
+#  NAMES gtest_main
+#  PATHS ${PROJECT_NAME}/lib64/
+#)
+#target_link_libraries(
+#  tests
+#  ${CMAKE_THREAD_LIBS_INIT}
+#  ${GTEST_LOCAL_LIB}
+#  ${GTEST_LOCAL_LIB_MAIN}
+#  ${PROJECT_NAME}
+#)
 
 enable_testing()
 add_test(NAME unit_tests COMMAND tests) 
@@ -84,7 +86,7 @@ if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(codecov)
-  add_coverage(JSON_Parser)
+  add_coverage(${PROJECT_NAME})
   add_coverage(tests)
   list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
   coverage_evaluate()
